apply plugin: 'java'
apply plugin: 'maven-publish'

group = "io.github.jwharm.cairo-java-bindings"
version = "1.16-0.1.0"

repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
}

dependencies {
    implementation "com.github.jwharm.java-gi:glib:latest.release"
    testImplementation "org.junit.jupiter:junit-jupiter:5.9.2"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
    withSourcesJar()
    withJavadocJar()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

javadoc.options {
    addBooleanOption("-enable-preview", true)
    addStringOption("-release", "20")
}

jar {
    archiveBaseName = "cairo"
    archiveVersion = "1.16-0.1.0"
}

test {
    useJUnitPlatform()
    jvmArgs += "--enable-preview"
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}

